from typing import TypedDict

class PersonalBackgroundDto(TypedDict):
    medical_background:str
    cirurgic_background:str