from typing import TypedDict

class UsualMedicationDto(TypedDict):
    medication:str
    dose:str